# exchange_rates

./: .gitignore  Cargo.toml  Dockerfile  README.md
api_data/: physical_currency_list.csv
src/: api.rs  args.rs  cli.rs  currencies.rs  errors.rs  http.rs  main.rs
